# CONSPECTIUS_v.0.1.0

./: .gitignore  README.md  asd.py  auth.py  logger.py  main.py  pyproject.toml  requirements.txt
app/: get_giga_token.py  transcribing.py
gigachatbot/: get_token.py  logger.py  main.py  models.py  requests_for_text_generation.py
